References for External Authentiction google, facebook e.t.c

--- a/Rabatseta.co/Views/Home/About.cshtml
+++ b/Rabatseta.co/Views/Home/About.cshtml
@@ -8,10 +8,13 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title></title>
+    <title>About</title>
 </head>
 <body>
-    <div> 
-    </div>
+Rabatseta.co works in progress<hr/>
+    Watch the space for new features.
+<div>
+
+</div>
 </body>
 </html>
