--- a/Rabatseta.co/Views/Shared/_Layout.cshtml
+++ b/Rabatseta.co/Views/Shared/_Layout.cshtml
@@ -26,7 +26,8 @@
         @Html.ActionLink("About", "About", "Home")
         @Html.ActionLink("Users", "ListUsers", "Users")
         @Html.ActionLink("Downloads", "DownloadsHome", "ClientFiles")
-        @Html.ActionLink("Add User","CreateSysUser","Users")
+        @Html.ActionLink("Add User", "CreateSysUser", "Users") 
+        @Html.ActionLink("Login Page","Login","Home")
     </nav>
 </header>
 
