--- a/Rabatseta.co/Views/Login/LoginPage.cshtml
+++ b/Rabatseta.co/Views/Login/LoginPage.cshtml
@@ -1,9 +1,10 @@
 ﻿@using System.Collections
 @using Microsoft.Web.WebPages.OAuth;
+@model ICollection<AuthenticationClientData>
 
 @{
     
-    @model ICollection<AuthenticationClientData>
+    
 }
 
 <!DOCTYPE html>
@@ -14,7 +15,17 @@
     <title>LoginPage</title>
 </head>
 <body>
-    <div> 
-    </div>
+<div>
+     @using (Html.BeginForm("ExternalLogin", "Login", new {ReturnUrl = ViewBag.ReturnUrl}))
+          {
+              @Html.AntiForgeryToken()
+              <p>
+                  @foreach (AuthenticationClientData p in Model)
+                  {
+                      <button type="submit" name="provider" value="@p.AuthenticationClient.ProviderName" title="Log in using your @p.DisplayName account">@p.DisplayName</button>
+                  }
+              </p>
+          }
+</div>
 </body>
 </html>
